# crankiac

./: .env.example  .gitignore  .mcp.json  .railwayignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  Procfile  README.md  TESTING_TRANSCRIPT_SPEAKER_UPDATES.md  VERSIONING.md  config.json  conftest.py  manage.py  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  run.py
.beads/: PRIME.md  config.yaml  issues.jsonl
.github/workflows/: acceptance-tests.yml  deploy.yml  integration-tests.yml  unit-tests.yml
app/: __init__.py  config.py  episode_filter.py  pipeline.py
app/api/: admin_routes.py  app.py  audio_routes.py  routes.py  transcript_routes.py
app/data/: database.py
app/db/: connection.py  models.py  repository.py
app/filters/: __init__.py  episode_filter.py
app/patreon/: client.py  downloader.py
app/search/: query_expander.py
app/transcription/: boundary_refinement.py  clip_extractor.py  corrections.py  diarization.py  enroll.py  llm_corrector.py  llm_prompts.py  speaker_identification.py  storage.py  vad.py  whisper_transcriber.py
data/: correction_dictionary.json  cth_names.json  cth_vocabulary.txt
docs/: audio-playback-speaker-paint.md  database-schema.md  extract-speaker-clips-plan.md  llm-post-processing-design.md  llm-search-plan.md  patreon-api-research.md  semantic-edit-diff-plan.md  transcript-editor-plan.md  transcript-editor-tdd-breakdown.md  transcript-search-approaches.md
refinery/: REFINERY.md
scripts/: PUSH_TO_REMOTE_PLAN.md  bump_version.py  extract_cth_names.py  push_to_remote.py
witness/: state.json
(+86 files in other folders)
